--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,15 +15,15 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
-<<<<<<< HEAD
-
-=======
 body{
   font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
 }
->>>>>>> d9e9dbe8ea37c1f5cbf1ff6bdd74300e3a8e2e68
-
+#caroseimg{
+  width: 100%;
+  height: 411px;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
